add query parameters to api | sort + filter
